--- a/references.bib
+++ b/references.bib
@@ -256,3 +256,30 @@
 	url = {http://dx.doi.org/10.1183/13993003.01499-2021},
 	langid = {en}
 }
+
+@article{holland2022,
+	title = {The Contribution of Anthropometry and Socioeconomic Status to Racial Differences in Measures of Lung Function},
+	author = {Holland, Rachel and Bowerman, Cole and Stanojevic, Sanja},
+	year = {2022},
+	month = {09},
+	date = {2022-09},
+	journal = {CHEST},
+	pages = {635--646},
+	volume = {162},
+	number = {3},
+	doi = {10.1016/j.chest.2022.04.017},
+	url = {http://dx.doi.org/10.1016/j.chest.2022.04.017},
+	langid = {en}
+}
+
+@article{adibi2024,
+	title = {The effect of health disparities on racial gaps in lung function},
+	author = {Adibi, Amin and Carlsten, Christopher and Brigham, Emily and Sin, Don and Loewen, Peter and Sadatsafavi, Mohsen},
+	year = {2024},
+	month = {09},
+	date = {2024-09-14},
+	journal = {Epidemiology},
+	pages = {OA5572},
+	doi = {10.1183/13993003.congress-2024.oa5572},
+	url = {http://dx.doi.org/10.1183/13993003.congress-2024.OA5572}
+}
