--- a/references.bib
+++ b/references.bib
@@ -273,13 +273,16 @@
 }
 
 @article{adibi2024,
-	title = {The effect of health disparities on racial gaps in lung function},
-	author = {Adibi, Amin and Carlsten, Christopher and Brigham, Emily and Sin, Don and Loewen, Peter and Sadatsafavi, Mohsen},
-	year = {2024},
-	month = {09},
-	date = {2024-09-14},
-	journal = {Epidemiology},
-	pages = {OA5572},
-	doi = {10.1183/13993003.congress-2024.oa5572},
-	url = {http://dx.doi.org/10.1183/13993003.congress-2024.OA5572}
+  author = {Adibi, Amin and Carlsten, Christopher and Brigham, Emily and Sin, Don and Loewen, Peter and Sadatsafavi, Mohsen},
+  title = {The effect of health disparities on racial gaps in lung function},
+  volume = {64},
+  number = {suppl 68},
+  elocation-id = {OA5572},
+  year = {2024},
+  doi = {10.1183/13993003.congress-2024.OA5572},
+  publisher = {Eur Respir J},
+  abstract = {Background: Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations mitigate bias due to disparities at the cost of reduced precision. However, it is unclear what proportion of racial gaps in lung function is due to known disparities. Hypothesis: Measurable disparities will help explain racial gaps in lung function. Methods:  We defined reference populations from 20,050 Black and White NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with occupational exposure to dust/fumes, maternal tobacco use, second-hand smoke exposure, obesity, low physical activity, unhealthy diet, self-assessed poor health, and no insurance. Across populations, we compared average age-, sex-, and height-adjusted differences in FEV1 and FVC between Black and White adults (≥20) and youth (&lt;20). Results: From the base reference population to the most restrictive, the percentage of Black participants decreased from 20% to 16% in youth and 14% to 7% in adults. The racial gap in lung function was reduced from 0.40 L (95%CI 0.36-0.43) to 0.31 L (95%CI 0.26-0.36) in FEV1 and from 0.48 L (95%CI 0.44-0.51) to 0.36 (95%CI 0.30-0.42) in FVC in youth but increased in adults. Conclusions: The disparities investigated herein explain up to 25% of the racial gap in lung function among American youth. Further research on adults is required. erj;64/suppl_68/OA5572/F1F1F1},
+  URL = {https://publications.ersnet.org//content/erj/64/suppl_68/OA5572},
+  eprint = {https://publications.ersnet.org//content/erj/64/suppl_68/OA5572.full.pdf},
+  journal = {European Respiratory Journal}}
 }
